# pyaspeller

./: .coveragerc  .flake8  .gitignore  .hgflow  .hgignore  .travis.yml  CHANGELOG.md  CHANGES.txt  CONTRIBUTORS.txt  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  contributors.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python-package.yml  release.yml
docs/: Makefile  conf.py  index.rst  make.bat
examples/: example.py
pyaspeller/: __init__.py  errors.py  speller.py  word.py  yandex_speller.py
src/: word.py  yandex_speller.py
src/pyaspeller/: __init__.py  errors.py  speller.py  word.py  yandex_speller.py
tests/: __init__.py  test_cli.py  test_speller.py  test_word.py
