[tool.poetry]
name = "pyaspeller"
version = "0.2.3"
description = "Search tool typos in the text, files and websites."
authors = [
    "Vassiliy Taranov <taranov.vv@gmail.com>",
]
license = "Apache 2"
readme = "README.md"
homepage = "https://github.com/oriontvv/pyaspeller"
repository = "https://github.com/oriontvv/pyaspeller"
documentation = "https://github.com/oriontvv/pyaspeller"
keywords = [
    "spell",
    "spelling",
    "spellcheck",
    "api",
    "yandex",
    "text",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic"
]
packages = [
    { include = "pyaspeller", from = "src" }
]

[tool.poetry.scripts]
pyaspeller = "src.pyaspeller.__init__:main"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coveralls = { version = "^3.3.1", extras = [ "toml" ]}
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-deadfixtures = "^2.2.1"


[build-system]
requires = [
    "poetry>=0.12",
]
build-backend = "poetry.masonry.api"

[tool.flake8]
ignore = [
    "N801",
    "N802",
    "N803",
    "E226",
]
max-complexity = 10

[tool.pytest]
addopts = "--ignore=py3 --ignore=build"


[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
# Make sure this matches `*.py` in .editorconfig
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true


[tool.coverage.run]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
